--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab_Semana_1
-main.class=lab.semana.pkg1.LabSemana1
+main.class=lab.semana.pkg1.Guevara_Ernesto_BoletaEmpleado
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
